logs/mobility/build.make.010.log.stderr
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘PickUpResult PickUpController::pickUpSelectedTarget(geometry_msgs::Pose2D)’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:101:13: error: ‘pickUpController’ was not declared in this scope
 goodAngle = pickUpController.correctAngleBearingToPickUpCube;
             ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
